--- a/buildpack.toml
+++ b/buildpack.toml
@@ -3,7 +3,7 @@ api = "0.7"
 [buildpack]
   homepage = "https://github.com/naveeninitializ/node-engine"
   id = "naveeninitializ/node-engine"
-  name = "Paketo Buildpack for Node Engine"
+  name = "Naveen Buildpack for Node Engine"
   sbom-formats = ["application/vnd.cyclonedx+json", "application/spdx+json", "application/vnd.syft+json"]
 
   [[buildpack.licenses]]
